# Change log for DateTime::Format::Builder

---
version: 0.73
date:    12 Jun 2003
changes:
    - Exit parser more quickly if able.

---
version: 0.72
date:    28 May 2003
changes:
    - Minor tweaks for the 'private' tag in META.yml

---
version: 0.71
date:    23 May 2003
changes:
    - Massive doc (re)writing.
    - Examples tidied up.
    - Tutorial refactored.
    - Users of generic.pm get to subclass now rather than coderef.

---
version: 0.69
date:    28 Apr 2003
changes:
    - DateTime::Format::Strptime is now supported.
    - To support the previous item, massive refactoring.
    - Minor API changes that shouldn't affect anyone.

---
version: 0.64
date:    27 Apr 2003
changes:
    - Callbacks are given 'args' and 'self' keys.
    - Callbacks can be arrays of callbacks.

---
version: 0.62
date:    20 Apr 2003
changes:
    - Fixed erroneous call to on_fail()
    - Added 'verbose' debugging capability.
    - Added 'constructor' option to create_class/import.
    - Avoid overwriting developers' own new() functions.
    - Complain if asked to overwrite methods.

---
version: 0.60
date:    12 Apr 2003
changes:
    - Fixed missing '\' from a few '\d' in the docs.
    - Added ICal.pm example.
    - Added import() feature, to save lots of typing.
    - Completely revised documentation.
    - croak is same length is given twice.
    - Assorted refactoring, retouching.

---
version: 0.25
date:    29 Mar 2003
changes:
    - Minor code cleanups.
    - Bug fix; 'extra' params were being ignored.
    - Doc fix; 'extra' params with 0 are not recommended.

---
version: 0.24
date:    25 Mar 2003
changes:
    - First release!
    - Split POD into separate file.
    - Preprocess option for method building works.
    - Postprocess option per parser works.
    - Specification lists can now have coderefs in there.

---
version: 0.23
date:    25 Mar 2003
changes:
    - Improved ancillary files.
    - Added basic use case test for new classes.
    - Assorted API changes.